--- a/JavaApplication11/src/tela/manutencao/touro/ManutencaoTouro.form
+++ b/JavaApplication11/src/tela/manutencao/touro/ManutencaoTouro.form
@@ -162,6 +162,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="11" style="3"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Lades of the game."/>
       </Properties>
     </Component>
